syntax = "proto3";

package tunnel;
option go_package = "./proto";

// Legitimate gRPC service for masking
service TunnelService {
  // Bidirectional streaming for tunnel connection
  rpc Connect(stream TunnelFrame) returns (stream TunnelFrame);
  
  // Fake legitimate endpoints for DPI evasion
  rpc GetStatus(StatusRequest) returns (StatusResponse);
  rpc GetMetrics(MetricsRequest) returns (MetricsResponse);
}

message TunnelFrame {
  bytes data = 1;
  int64 timestamp = 2;
  string session_id = 3;
}

message StatusRequest {
  string service = 1;
}

message StatusResponse {
  string status = 1;
  int64 uptime = 2;
  string version = 3;
}

message MetricsRequest {
  repeated string metrics = 1;
}

message MetricsResponse {
  map<string, double> values = 1;
}
